<resources>
    <string name="app_name">ThoiTrang</string>
    <string name="trangchu">Trang chủ</string>
    <string name="lichsu">Lịch sử</string>
    <string name="yeuthich">Yêu thích</string>
    <string name="taikhoan">Tài khoản</string>
    <string name="anh">Ảnh minh họa</string>
    <string name="ten">Tên</string>
    <string name="gia">Giá</string>
    <string name="home">home</string>
    <string name="tinnhan">Tin nhắn</string>
    <string name="thongbao">Thông báo</string>
    <string name="giohang">Giỏ hàng</string>
    <string name="linhsu">Lịch sử</string>
    <string name="nhantin">Nhắn tin</string>
    <string name="datmua">Đặt mua</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="dangky">Đăng ký</string>
    <string name="quenntaikhoan">Quên tài khoản</string>
    <string name="quenmatkhau">Quên mật khẩu</string>
    <string name="sodienthoai">Số điện thoại</string>
    <string name="dangnhapbang">Đăng nhập bằng</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="tendangky">Tên đăng ký</string>
    <string name="tenmau">Đạt Hoàng</string>
    <string name="stdmau">999999999</string>
    <string name="denngay">Đến ngay</string>
    <string name="thongtin">Thông tin</string>
    <string name="mausac">Màu sắc</string>
    <string name="tinhtrang">Tình trạng</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="chinhsua">Chỉnh sửa</string>
    <string name="hangtronggio">Hàng trong giở:</string>
    <string name="soluong">Số lượng</string>
    <string name="tongtien">Tổng tiền:</string>
    <string name="muangay">Mua ngay</string>
    <string name="vnd">0.vnd</string>
    <string name="chonsize">Size</string>
    <string name="thoigianmau">16:47 05/02/2022</string>


    <string name="sizecosan">Size: S, M, L, XL</string>


    <string name="danhriengchotoi">Dành cho bạn</string>
    <string name="donmua">Đơn mua</string>
    <string name="damua">Đã mua</string>
    <string name="dangvanchuyen">Đang vận chuyển</string>
    <string name="naptien">Nạp tiền</string>
    <string name="live">Live</string>
    <string name="dexuat">Đề xuất</string>
    <string name="theodoi">Theo dõi</string>
    <string name="dathich">Đã thích</string>
    <string name="vi">Ví</string>
    <string name="xu">Xu</string>
    <string name="voucher">Voucher</string>
    <string name="tienich">Tiền ích</string>
    <string name="moiban">Mời bạn</string>
    <string name="trochuyen">Trò chuyện</string>
    <string name="thietlaptaikhoan">Thiết lập</string>
    <string name="trungtamhotro">Trung tập hỗ trợ</string>
    <string name="danhgia">Đánh giá</string>
    <string name="noibat">Nổi bật</string>
    <string name="danhmuc">Danh mục</string>
    <string name="hoatdong">Hoạt động</string>
    <string name="hoten">Họ tên</string>
    <string name="diachi">Địa chỉ</string>
    <string name="themvaogio">Thêm vào giở</string>
    <string name="sodu">Số dư</string>
    <string name="timkiemhangdau">Tìm kiếm hàng đầu</string>
    <string name="khuyenmai">Khuyến mại</string>
    <string name="xemshop">Thông tin shop</string>
    <string name="vdsosanpham">Item 100</string>
    <string name="vdphanhoi">Phản hồi 100%</string>
    <string name="vddanhgia">Vote 4.5</string>
    <string name="phanhoikh">Phản hồi của khách hàng</string>
    <string name="mienphivanchuyen">Miễn phí vận chuyển</string>
    <string name="hanoi">Ha Noi</string>
    <string name="sophanhoi">999.999.999 phản hồi</string>
    <string name="xemthem">Thêm</string>
    <string name="consanpham">Có sẵn 999</string>
    <string name="tatca">Tất cả >></string>
    <string name="tatca1">Tất cả</string>
    <string name="bora">Xóa</string>
    <string name="vdbinhluan">Chất lượng rất tốt, màu sắc đẹp. Tôi rất thích !</string>


    <string name="phukien">Phụ kiện</string>
    <string name="vanmay">Vận may</string>
    <string name="aonam">Áo nam</string>
    <string name="aonu">Áo nữ</string>
    <string name="vay">Váy ngắn</string>
    <string name="quannam">Quần nam</string>
    <string name="quannu">Quần nữ</string>
    <string name="daynam">Giafuy nam</string>
    <string name="daynu">Giày nữ</string>
    <string name="mu">Mũ</string>
    <string name="giay">Giày</string>
    <string name="thatlung">Thắt</string>
    <string name="dodoi">Đồ đôi</string>
    <string name="dobo">Đồ bộ</string>
    <string name="aokhoac">Áo khoác</string>
    <string name="dohocsinh">Đồ học sinh</string>
    <string name="dep">Dép</string>
    <string name="kinh">Kính</string>
    <string name="tat">Tất</string>
    <string name="gangtay">Găng tay</string>
    <string name="dongho">Đồng hồ</string>
    <string name="khampha">Khám phá</string>
    <string name="dondep">Dọn dẹp</string>
    <string name="muatiep">Mua tiếp</string>
    <string name="thanhtoan">Thanh Toán</string>
    <string name="tongsanpham">Tổng sản phẩm</string>
    <string name="nhapthongtin">Nhập thông tin</string>
    <string name="hinhthucthanhtoan">Hình thức thanh toán</string>
    <string name="tratruoc">Trả trước</string>
    <string name="trasau">Trả sau</string>
    <string name="huybo">Hủy bỏ</string>
    <string name="xoaitem">Xóa item ?</string>
    <string name="annutxacnhan">Ấn nút xác nhận</string>
    <string name="xacnhan">Xác nhận</string>
    <string name="xoatatca">Xóa tất cả ?</string>
    <string name="thoigianlamviec">Thời gian làm việc: 6:30AM - 21:30PM</string>
    <string name="thongtinthem">Thông tin thêm</string>
    <string name="sanpham">Sản phẩm</string>
    <string name="bangtin">Bảng tin</string>
    <string name="chiase">Chia sẻ</string>
</resources>