<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/mau_trang_bo16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/nen_tieu_de_dialog"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/nhapthongtin"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:text="@string/hoten"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/ed_ten_dialog_mua"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:maxLength="100"
        android:maxLines="1"
        android:padding="3dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:text="@string/sodienthoai"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/ed_sdt_dialog_mua"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_horizontal"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="3dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:text="@string/diachi"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/ed_diachi_dialog_mua"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:maxLength="210"
        android:maxLines="3"
        android:padding="3dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:text="@string/hinhthucthanhtoan"
        android:textColor="@color/black" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tratruoc" />

        <RadioButton
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trasau" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_huy_dialog"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="#A4AAA6"
            android:text="@string/huybo"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bt_mua_dialog"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="#44B5BF"
            android:text="@string/thanhtoan"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>