<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/mau_trang_bo16dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tieude_dialog"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/xoaitem"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:background="@drawable/nen_tieu_de_dialog"
        android:padding="5dp"/>
    <TextView
        android:layout_marginTop="10dp"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/annutxacnhan"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bthuy_dialog_xoa"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/huybo"
            android:backgroundTint="#A4AAA6"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/btxoa_dialog_xoa"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/xacnhan"
            android:backgroundTint="#44B5BF"
            android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>