<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/dangky"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/ed_ten_tai_khoan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/tendangky"
        android:inputType="text"
        android:maxLength="100"
        android:maxLines="1" />

    <EditText
        android:id="@+id/ed_so_dien_thoai"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/sodienthoai"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1" />

    <EditText
        android:id="@+id/ed_mat_khau1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/matkhau"
        android:inputType="textPassword"
        android:maxLength="25"
        android:maxLines="1" />

    <EditText
        android:id="@+id/ed_mat_khau2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/matkhau"
        android:inputType="textPassword"
        android:maxLength="25"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btdangky"
            style="@style/Base.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/dangky" />
    </LinearLayout>

</LinearLayout>