<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudChinh"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/live"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_mes"
            android:id="@+id/btnhantin_live"
            android:backgroundTint="@color/white"/>
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_gio_hang"
            android:id="@+id/btgiohang_live"
            android:backgroundTint="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/white"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dexuat"
            android:textAllCaps="false"
            android:textColor="#EC0000"
            android:textSize="22sp"
            android:background="#00000000"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/theodoi"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="#00000000"/>
    </LinearLayout>
    <TextView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noibat"
        android:textColor="@color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/nentextview"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rcv_live"/>
</LinearLayout>