<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30sp"
    android:layout_margin="3dp"
    android:padding="6dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            app:cardCornerRadius="30dp">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/anh"
                android:id="@+id/avt_lien_lac"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_ten_lien_lac"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="3dp"
                android:text="@string/tenmau"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:id="@+id/tv_ten_tin_nhan_cuoi"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/app_name"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>