<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroudChinh"
    tools:context=".Activity.GiaoDienTungLoaiSanPham">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/white"
                    android:backgroundTint="#00000000"
                    android:gravity="center"
                    android:text="@string/tatca1"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <ImageButton
                    android:layout_gravity="right"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_mes"
                    android:background="@color/backgroud1"/>
            </FrameLayout>

        </LinearLayout>
    </FrameLayout>
    <androidx.appcompat.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="3dp"
        android:background="@color/white"/>
    <HorizontalScrollView
        android:layout_marginTop="3dp"
        android:layout_margin="3dp"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/tatca1"
                android:textAllCaps="false"
                android:background="@color/backgroud1"
                android:textColor="#FF0000"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/aonam"
                android:textAllCaps="false"
                android:background="@color/backgroud1"
                android:textColor="@color/black"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/aonu"
                android:textAllCaps="false"
                android:background="@color/backgroud1"
                android:textColor="@color/black"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/quannu"
                android:textAllCaps="false"
                android:background="@color/backgroud1"
                android:textColor="@color/black"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/quannam"
                android:textAllCaps="false"
                android:background="@color/backgroud1"
                android:textColor="@color/black"/>
        </LinearLayout>
    </HorizontalScrollView>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rcv_tatca"
        android:background="@color/backgroudChinh"/>

</LinearLayout>