<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_tieu_de_thong_bao"
            android:text="@string/ten"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:padding="6dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_noi_dung_thong_bao"
            android:text="@string/ten"
            android:textColor="@color/black"
            android:padding="6dp"
            android:textSize="18sp"
            android:textStyle="italic"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/denngay"
                android:textAllCaps="false"
                android:textColor="@color/purple_700"
                android:background="@drawable/button_trong_suot"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_thoi_gian_thong_bao"
                android:text="@string/thoigianmau"
                android:gravity="end"
                android:padding="3dp"
                android:textSize="15sp"
                android:textStyle="italic"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>