<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroudChinh"
    tools:context=".Activity.GioHang">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:backgroundTint="#00000000"
                android:gravity="center"
                android:text="@string/giohang"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <ImageButton
                android:id="@+id/btxoa_giohang"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/backgroud1"
                android:src="@drawable/ic_thung_rac" />

        </RelativeLayout>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/backgroudChinh"
        android:id="@+id/rcv_giohang"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tongsanpham"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tongtien"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="0"
                    android:textColor="#FFFFFF"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btmuasamtiep_giohang"
                    style="@style/Theme.Design"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:backgroundTint="#717171"
                    android:textSize="18sp"
                    android:text="@string/muatiep"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/btmua_giohang"
                    style="@style/Theme.Design"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/nentextview"
                    android:textSize="18sp"
                    android:text="@string/thanhtoan"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

</LinearLayout>